Added optional mount of certificates volume in marathon app